[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Scripts/Login.gd" id="1_abcde"]

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_abcde")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Enter Your Name"
horizontal_alignment = 1

[node name="NameEdit" type="LineEdit" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Player Name"
alignment = 1

[node name="LoginButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Login"

[node name="GoogleLoginButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Sign in with Google"
